tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__cancel-3.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult::from_result(\"changes\", manager.current_tick(), &result,\n    &manager.validator())"

---
SnapshotResult {
    tag: "changes",
    current_tick: 45,
    move_actions: None,
    jump_actions: None,
    talk_actions: None,
}
