tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__each_tick-10.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"updates\",\n    move_actions: actions.get(),\n    jump_actions: actions.get(),\n    talk_actions: actions.get(),\n}"

---
SnapshotResult {
    tag: "updates",
    current_tick: 7,
    move_actions: None,
    jump_actions: None,
    talk_actions: Some(
        [
            Action {
                raw: TalkState,
                entity_id: 1,
                ty: Update {
                    start: 462,
                    end: 660,
                },
            },
        ],
    ),
}
