tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__test-3.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"updates\",\n    move_actions: actions.get(),\n    jump_actions: actions.get(),\n    talk_actions: actions.get(),\n}"

---
SnapshotResult {
    tag: "updates",
    current_tick: 3,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: Update {
                    start: 0,
                    end: 990,
                },
            },
            Action {
                raw: MoveState,
                entity_id: 2,
                ty: Update {
                    start: 0,
                    end: 462,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
